adding sonar configuration